--- a/static/css/main.quickfix.css
+++ b/static/css/main.quickfix.css
@@ -65,14 +65,6 @@
   font-weight: bold;
 }
 
-.story {
-  width:100%;
-  background: url(http://old.blueshiftcoding.com/wp-content/uploads/2017/09/21197423-995B-4ED1-8294-075428CBEC4C.jpg);
-  height: 23em;
-  background-size:
-  cover;
-}
-
 .bio-text p {
   color: #003366 !important;
 }
